--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -82,12 +82,22 @@
     <li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec </li>
     <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
   </ul>
-  <h2 id="h-1">Factors that can determine the status of the worker</h2>
+<h2 class="h3">On this page</h2>
+  	
+<ul>
+<li><a href="#h_1">Gather all facts to determine the status of the worker</a></li>
+<li><a href="#h_2">Final analysis based on all factors</a></li>
+<li><a href="#h_3">What if you are not sure if the worker is an employee or self-employed</li>
+<li><a href="#h_4">References</a></li>
+</ul>
+
+  <h2 id="h_1">Gather all facts to determine the status of the worker</h2>
   <p>This new information was developed based on guide <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">RC4110, Employee or Self-employed?</a></p>
   <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
     <h3 class="h4 mrgn-tp-0">This content is for guidance only</h3>
     <p>This guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
   </div>
+
   <p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
   <p>Review the questions for each factor, and make a selection to help you gather the facts based on your situation.</p>
   <ul class="fa-ul">
@@ -1700,7 +1710,7 @@
       </div>
     </li>
   </ul>
-  <h2>Final analysis based on these  7 factors</h2>
+  <h2 id="h_2">Final analysis based on all factors</h2>
   <div id="ajax-facts">
     <h3 id="analyze">Analyze the facts</h3>
     <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
@@ -1728,10 +1738,10 @@
     <h3 id="case">Review each situation on a case-by-case basis</h3>
     <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 
- <h3 id="ruling">Get a CPP/EI ruling</h3>
+ <h2 id="h_3">What if you are not sure if the worker is an employee or self-employed</h2>
 <div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-ruling"></div>
   </div>
-  <h2 id="h-4">References</h2>
+  <h2 id="h_4">References</h2>
   <h3 id="h_6_2">Legislation and Court cases</h3>
   <dl class="dl-horizontal">
     <dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/1898/index.do">27820</a> </dt>
