--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -88,21 +88,23 @@
 </ul>
 
   <h2 id="h_0">Determine where the contract was formed</h2>
-  <p>The CRA developed a guidance to help determine the status of the worker. Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed (unless the contract states differently):</p>
+  <p>The CRA developed a guidance to help determine the status of the worker.</p>
+<p> Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed (unless the contract states differently):</p>
   <ul class="fa-ul mrgn-bttm-lg">
     <li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec </li>
     <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
   </ul>
-<p>This new information was developed based on guide <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">RC4110, Employee or Self-employed?</a></p>
-  
-
-  <h2 id="h_1">Gather all facts to determine the status of the worker</h2>
   <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
     <h3 class="h4 mrgn-tp-0">This content is for guidance only</h3>
     <p>This guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
   </div>
 
-  <p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
+<p>This new information was developed based on guide <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">RC4110, Employee or Self-employed?</a></p>
+  
+
+  <h2 id="h_1">Gather all facts to determine the status of the worker</h2>
+
+  <p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a <strong>case-by-case basis</strong>.</p>
   <p>Review the questions for each factor, and make a selection to help you gather the facts based on your situation.</p>
   <ul class="fa-ul">
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-handshake"></span></span>
@@ -1729,11 +1731,11 @@
 <p>Special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
         <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a> </p>
       </li>
-      <li class="cnjnctn-col-70">
+      <li class="cnjnctn-col-60">
          <div class="bg-primary px-2">
 		<p class="px-2 px-sm-3 mrgn-bttm-sm"><span class="h6">Indicator that the worker is: </span><br><span class="h3">Self-employed</span></p>
 			 </div>
-        <p>If the worker is self-employed, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
+        <p>If the worker is self-employed, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the tax obligations</a></p>
       </li>
     </ul>
     <h3 id="weight">Weighing the facts</h3>
