--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -103,27 +103,33 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
+<ul>
+<li><a href="#h_0">Determine where the contract was formed</a></li>
+<li><a href="#h_1">Gather all facts to determine the status of the worker</a></li>
+<li><a href="#h_2">Final analysis based on all factors</a></li>
+<li><a href="#h_3">What if you are not sure if the worker is an employee or self-employed</li>
+<li><a href="#h_4">References</a></li>
+</ul>
+
+  <h2 id="h_0">Determine where the contract was formed</h2>
+  <p>The CRA developed a guidance to help determine the status of the worker.</p>
+
  <p>Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed (unless the contract states differently):</p>
 <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> In the province of Quebec</li>
 <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in Quebec</li>
 </ul>
 
-<h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
-<ul class="cnjnctn-type-or cnjnctn-sm">
-	<li class="cnjnctn-col"><a href="#interactive">Interactive questions</a> to get specific results, factors and indicators </li>
-	<li class="cnjnctn-col">Read the full text, continue to <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Guide RC4110</a></li>
-	</ul>
-<h2 id="interactive">Answer a few questions to help you gather the facts based on your situation</h2>
-   
-<div class="alert alert-warning">
-<p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
-</div>
+  <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
+    <h3 class="h4 mrgn-tp-0">This content is for guidance only</h3>
+    <p>This guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
+  </div>
 
-<p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
-<p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or indicators to help you gather the facts based on your situation</p>
-<h2 id="h-1">Gather the facts</h2>			  
-
+<p>This new information was developed based on guide <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">RC4110, Employee or Self-employed?</a></p>
+  
+ <h2 id="h_1">Gather all facts to determine the status of the worker</h2>
+<p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a <strong>case-by-case basis</strong>.</p>
+  <p>Review the questions for each factor, and make a selection to help you gather the facts based on your situation.</p>
 
 <details open="open"><summary> <h2 class="h3 text-info" id="factor1"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 1 - Contract arrangement</h2></summary>
 <p id="1_2" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
@@ -950,11 +956,11 @@
 
 </details>
 
-<h2>Make your final analysis based on the 5 factors</h2>
+<h2 id="h_2">Final analysis based on all factors</h2>
 
 <div data-ajax-replace="/cra-arc/payroll/guidance/factors-federal.html#ajax-facts"></div>
  	 
-<h2 id="h-4">References</h2>
+<h2 id="h_4">References</h2>
 
 <h3 id="h_6_2">Legislation and Court cases</h3>
 <div class="row">
