--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -111,7 +111,7 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, <strong>self-employed</strong> or an <strong>incorporated employee</strong> the tax obligations may be different.</p>
 
-<p>Incorporated employees and payers have different tax obligations if the incorporated employees <strong>perform the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB).</p>
+<p>The incorporated employee and the payer have different tax obligations because the incorporated employee <strong>performs the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB).</p>
 
 <p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is an incorporated employee, continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>
 
