--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -133,7 +133,7 @@
 </li>
 </ul>
 
-<h2> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span> Past court decisions</h2>
+<h2> Past court decisions</h2>
 <p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 
 <section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
